Fixed layout issues

--- a/index.css
+++ b/index.css
@@ -86,7 +86,7 @@ h2 {
 }
 
 main {
-    padding: 0 2em;
+    padding: 1em 2em;
     margin-top: 8.7em;
     background: url("images/background-img-2.jpeg");
     padding-bottom: 1em;
@@ -99,6 +99,8 @@ main {
     margin-right: auto;
     height: 12.5em;
     margin-top: 1em;
+    padding-top: 1em;
+    min-width: 22em;
 }
 
 .profile-pic, .second-profile-pic {
@@ -157,7 +159,7 @@ main {
     border-radius: 20px;
     color: darkblue;
     display: block;
-    padding: .25em .5em;
+    padding: .25em 1em;
     width: 6em;
     margin: 0 auto 0 0;
 }
@@ -175,12 +177,13 @@ main {
     margin-right: auto;
     margin-left: auto;
     background-color: lightsteelblue;
-    padding: 3em 2em 0 2em;
+    padding: 2em 2em 0 2em;
     border-radius: 20px;
     max-width: 500px;
     width: 100%;
     color: darkblue;
     text-shadow: 0 0 10px white;
+    min-width: 22em;
 
 }
 
@@ -219,28 +222,6 @@ main {
     margin-top: .5em;
 }
 
-.project .tech-skills {
-    margin-bottom: 0;
-    margin-top: 0;
-    margin-left: 0;
-    min-width: 100%;
-}
-
-.project .list-of-skills{
-    margin-bottom: 0;
-    padding-bottom: 0;
-    margin-left: 0;
-    padding-left: 0;
-    width: 100%;
-
-}
-
-.project .list-of-skills li {
-    padding-bottom: 0;
-    padding-top: 0;
-    margin-left: 0;
-}
-
 footer {
     background-color: lavender;
     color: #1c1c1c;
@@ -264,6 +245,9 @@ footer {
     margin-top: 24em;
     max-width: 40em;
     margin-bottom: 1.9em;
+    padding-left: 2em;
+    padding-right: 2em;
+    min-width: 22em;
 }
 
 .tech-skills h2 {
@@ -281,8 +265,8 @@ footer {
     flex-wrap: wrap;
     margin: 0;
     padding-top: .25em;
-    padding-left: 1em;
-    padding-right: 1em;
+    padding-left: 0;
+    padding-right: 0;
     /* margin-top: 1.1em;
     margin-bottom: 1em; */
     padding-bottom: .5em;
@@ -307,11 +291,35 @@ footer {
     border: none;
 }
 
+.project .tech-skills {
+    margin-bottom: 0;
+    margin-top: 0;
+    margin-left: 0;
+    min-width: 100%;
+    background-color: none;
+}
+
+.project .list-of-skills{
+    margin-bottom: 1em;
+    padding-bottom: 0;
+    margin-left: 0;
+    padding-left: 0;
+    width: 100%;
+
+}
+
+.project .list-of-skills li {
+    padding-bottom: 0;
+    padding-top: 0;
+    margin-left: 0;
+}
+
 .about-me-img {
     /* padding-top: 2em; */
     object-fit: cover;
     width: 100%;
     max-width: 500px;
+    min-width: 22em;
 }
 
 .about-me .title, .contact{
@@ -332,12 +340,6 @@ footer {
     width: 5.5em;
 }
 
-.contact {
-    width: 6.7em;
-    font-size: 1.3rem;
-    background: none;
-}
-
 .about-me p {
     background-color: lightgoldenrodyellow;
     border-radius: 20px;
@@ -346,6 +348,7 @@ footer {
     color: #1c1c1c;
     margin-bottom: 1em;
     max-width: 500px;
+    min-width: 22em;
 }
 
 .about-me .flex-container {
@@ -357,18 +360,28 @@ footer {
 
 .contact-info {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: flex-start;
     margin-top: 0;
     margin-bottom: 0;
     background-color: lightsteelblue;
     border-radius: 20px;
     padding: 0;
+    padding-left: .25em;
     margin-top: 3em;
-    height: 5em;
+    height: 7.5em;
     max-width: 500px;
     margin-right: auto;
     margin-left: auto;
+    min-width: 200px;
+}
+
+.contact {
+    font-size: 2rem;
+    margin: 0;
+    padding: 0;
+    padding-top: .25em;
+    padding-left: .25em;
 }
 
 .contact-info a {
@@ -413,7 +426,7 @@ footer {
 .contact-icons {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-right: 1em;
 }
 
@@ -429,16 +442,56 @@ footer {
     background: lightsteelblue;
     border-radius: 20px;
     margin-top: 2em;
-    padding: 0;
+    padding: 0 2em;
     display: inline-block;
     text-align: left;
     margin-right: auto;
     margin-left: auto;
+    min-width: 22em;
+    text-shadow: 0 0 10px white;
 }
 
 .future-projects-title-p p {
     margin: 0 auto;
-    margin-bottom: 1em;
+    padding-bottom: 1em;
+}
+
+.future-projects-title-p h1 {
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
+.future-projects .project {
+    padding-top: 0;
+    min-width: 22em;
+}
+
+.future-projects h3 {
+    margin-bottom: 0;
+}
+
+@media (min-width: 400px){
+    .contact-info {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        height: 5em;
+    }
+    .contact-icons {
+        justify-content: space-between;
+    }
+    .contact {
+        width: 6.7em;
+        font-size: 1.3rem;
+        background: none;
+    }
+}
+
+@media (min-width: 450px){
+    .future-projects-title-p{
+        padding: 0 1em;
+    }
 }
 
 @media (min-width: 500px){
@@ -448,6 +501,10 @@ footer {
         text-align: left;
     }
 
+    .future-projects .project {
+        height: 23em;
+    }
+
     .about-me .title{
         margin-right: auto;
         margin-left: auto;
@@ -455,7 +512,8 @@ footer {
 
     .about-me p {
         margin-right: auto;
-        margin-left: auto
+        margin-left: auto;
+        text-align: center;
     }
     .intro-text {
         display: block;
@@ -536,6 +594,14 @@ footer {
         margin-left: auto;
     }
 
+    .project {
+        height: 36em;
+    }
+
+    main{
+        padding-top: 1em;
+    }
+
     .about-me .flex-container {
         display: flex;
         flex-direction: row;
@@ -547,10 +613,12 @@ footer {
     .tech-skills, .introduction{
         max-width: 50%;
         margin-top: 1em;
+        height: 12em;
     }
 
     .tech-skills {
         margin-left: 1em;
+        margin-bottom: 1em;
     }
 
     .about-me p {
@@ -565,6 +633,7 @@ footer {
 
     .tech-skills h2 {
         padding-top: .25em;
+
     }
 
     .profile-pic {
